[package]
name = "gtfs"
description = "Read and Write GTFS files"
version = "0.1.0"
license = "BSD-3-Clause"
homepage = "https://github.com/Quantumlyy/gtfs-rs/blob/main/README.md"
repository = "https://github.com/Quantumlyy/gtfs-rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
